--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "ipygame"
 version = "0.1.0"
-description = "A pygame compatibility layer for Jupyter notebooks using ipycanvas"
+description = "A pygame API-compatible reimplementation for running `pygame`-style code inside Jupyter notebooks (backed by ipycanvas)."
 readme = "README.md"
 requires-python = ">=3.11"
-license = "MIT"
+license = "LGPL 2.1"
 dependencies = [
     "ipycanvas>=0.13",
     "ipywidgets>=8.0",
