--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "A pygame API-compatible reimplementation for running `pygame`-style code inside Jupyter notebooks (backed by ipycanvas)."
 readme = "README.md"
 requires-python = ">=3.11"
-license = "LGPL 2.1"
+license = "MIT"
 dependencies = [
     "ipycanvas>=0.13",
     "ipywidgets>=8.0",
