--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,13 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["pydoc-markdown>=4.8.2", "PyYAML>=6.0"]
+dev = [
+    "pydoc-markdown>=4.8.2",
+    "PyYAML>=6.0",
+    "jupyterlite-core>=0.4.0",
+    "jupyterlite-pyodide-kernel>=0.4.0",
+    "build>=1.0.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/Kamuyin/ipygame"
