feat(ci): updated docs workflow for JupyterLite demo

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -47,6 +47,9 @@ jobs:
         working-directory: docs
         run: bun run generate:coverage
 
+      - name: Build JupyterLite
+        run: uv run bash docs/scripts/build_jupyterlite.sh
+
       - name: Build docs
         working-directory: docs
         run: bun run build
