--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ dependencies = [
 dev = [
     "pydoc-markdown>=4.8.2",
     "PyYAML>=6.0",
-    "jupyterlite-core>=0.4.0",
+    "jupyterlite>=0.4.0",
     "jupyterlite-pyodide-kernel>=0.4.0",
+    "jupyter-server>=2.0.0",
     "build>=1.0.0",
 ]
 
