--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dev = [
     "jupyterlite-pyodide-kernel>=0.4.0",
     "jupyter-server>=2.0.0",
     "build>=1.0.0",
+    "pytest>=9.0.2",
 ]
 
 [project.urls]
