--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dev = [
     "pydoc-markdown>=4.8.2",
     "PyYAML>=6.0",
     "jupyterlite>=0.4.0",
-    "jupyterlite-pyodide-kernel>=0.4.0",
+    "jupyterlite-xeus",
     "jupyter-server>=2.0.0",
     "build>=1.0.0",
     "pytest>=9.0.2",
