feat(docs): replaced kernel with xeus-python for JupyterLite

--- a/docs/jupyterlite/jupyter_lite_config.json
+++ b/docs/jupyterlite/jupyter_lite_config.json
@@ -4,6 +4,6 @@
     "enableMemoryCache": true
   },
   "jupyter-config-data": {
-    "defaultKernelName": "python"
+    "defaultKernelName": "xpython"
   }
 }
