--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Install Python deps
         run: uv sync --group dev
 
+      - name: Setup micromamba
+        uses: mamba-org/setup-micromamba@v2
+
       - name: Install docs deps
         working-directory: docs
         run: bun install --frozen-lockfile
