fix: added ensurepip

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Install Python deps
         run: uv sync --group dev
 
+      - name: Ensure pip in uv env
+        run: uv run python -m ensurepip --upgrade
+
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
 
